[project]
name = "berkeley-mqtt-bridge"
version = "0.1.0"
description = "MQTT → BerkeleyHouse ingest bridge for the Mosswood home intelligence platform"
requires-python = ">=3.11"

[project.scripts]
berkeley-mqtt-bridge = "bridge:main"

[project.dependencies]
paho-mqtt = ">=2.0"
requests  = ">=2.31"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
